# Nine-Puzzle

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  GlobalVars.cpp
src/application/: CMakeLists.txt  main.cpp
src/application/runtime/: MPIcontext.cpp  MPIcontext.h  configparser.h
src/computehandler/: CMakeLists.txt
src/controllers/: CMakeLists.txt  computehandler.cpp  computehandler.h
src/domains/: CMakeLists.txt
src/domains/fields/: mesh.cpp  mesh.h
src/domains/mesh/: field.cpp  field.h
src/fileManager/: CMakeLists.txt  FileManager.cpp
src/filemanager/: CMakeLists.txt  FileManager.h  filemanager.cpp
src/globalVars/: CMakeLists.txt
src/globalvars/: CMakeLists.txt  GlobalVars.h  globalvars.cpp
src/interfaces/: CMakeLists.txt
src/interfaces/IO/: Ifilehandler.h
src/interfaces/numerical/: Inumerical.h
src/interfaces/solvers/: Isolvers.h
src/meshManager/: CMakeLists.txt
src/meshmanager/: CMakeLists.txt  MeshManager.cpp  MeshManager.h  meshmanager.h
src/services/: CMakeLists.txt
src/services/IO/: filemanager.h
src/services/mesh/: meshmanager.cpp
src/utils/: CMakeLists.txt
src/utils/IO/: ioutilts.cpp  ioutilts.h
src/utils/linalg/: linalgutils.cpp  linalgutils.h
src/utils/math/: mathutils.cpp  mathutils.h
test/: config.yaml
